<resources>
    <string name="app_name">Wallet</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="incomess">Incomes</string>
    <string name="receivables">Receivables</string>
    <string name="debts">Debts</string>
    <string name="expensess">Expenses</string>
    <string name="incomes">Incomes</string>
    <string name="textview">TextView</string>
    <string name="add_expensive">Add Expensive</string>
    <string name="settings">Settings</string>
    <string name="expenses">Expenses</string>
    <string name="incomes_tv">Incomes</string>
    <string name="text3view">TextView</string>
    <string name="no_message">No message</string>
    <string name="expensive_amount">Expensive Amount</string>
    <string name="add_category">Add category</string>
    <string name="save">Save</string>
</resources>
