<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Add_Expense.Add_Expense">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="89dp"
           android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:paddingLeft="80sp"
        android:paddingRight="80sp"
        android:text="@string/no_message"
        android:textSize="25sp"
        tools:ignore="RelativeOverlap" />

    <Button

        android:id="@+id/Save"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="15sp" />

    <Button
        android:textAllCaps="false"
        android:id="@+id/AddCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="101dp"
        android:text="@string/add_category"
        android:textSize="9sp"
        tools:ignore="RelativeOverlap,SmallSp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Save"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="20"
        android:inputType="numberSigned"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_above="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/expensive_amount" />


</RelativeLayout>