<?xml version="1.0" encoding="UTF-8" ?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"

    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:paddingTop="@dimen/appbar_padding_top">

        <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/toolbar"-->

        <!--android:layout_width="match_parent"-->

        <!--android:layout_height="?attr/actionBarSize"-->
        <!--android:layout_gravity="start"-->
        <!--android:background="?attr/colorPrimary"-->
        <!--app:layout_scrollFlags="scroll|enterAlways"-->
        <!--app:popupTheme="@style/AppTheme.PopupOverlay"-->
        <!--app:title="@string/app_name">-->

        <!--</android.support.v7.widget.Toolbar>-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="299dp"
            android:layout_marginBottom="222dp"
            android:layout_marginTop="100sp"
            android:background="#FFFF">


            <TextView
                android:id="@+id/Incomes_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/incomes_tv"
                android:textColor="#068000"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Incomes_TextView"
                android:padding="5sp"
                android:text="@string/textview"
                android:textColor="#068000"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tv"
                android:layout_centerHorizontal="true"
                android:padding="5sp"
                android:text="@string/textview"
                android:textColor="#FF0000"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/Expensives_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:padding="5sp"
                android:text="@string/expenses"
                android:textColor="#FF0000"
                android:textSize="15sp" />

            <TextView


                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/tv"
                android:gravity="right"
                android:padding="5sp"
                android:text="@string/textview"
                android:textSize="15sp"
                tools:ignore="RtlHardcoded" />


            <TextView
                android:id="@+id/Nett"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:gravity="right"
                android:padding="5sp"
                android:text="@string/textview"
                android:textSize="15sp"
                tools:ignore="RelativeOverlap,RtlHardcoded" />


            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tv"
                android:layout_marginBottom="300sp"
                android:layout_marginTop="20sp">

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/incomes" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expenses" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receivables" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debts" />

            </android.support.design.widget.TabLayout>
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/btnaddincome"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#068000"
        android:text="@string/add_income"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/add_settings_size"
        tools:ignore="SpUsage" />

    <Button
        android:id="@+id/btnexpensive"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:background="#FF0000"
        android:text="@string/add_expensive"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/add_settings_size"

        tools:ignore="RtlHardcoded,SpUsage" />

    <Button
        android:id="@+id/btnsettings"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:background="#0680FF"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/add_settings_size"
        tools:ignore="SpUsage" />

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="299dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <!--<android.support.design.widget.FloatingActionButton-->
    <!--android:id="@+id/fab"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="end|bottom"-->
    <!--android:layout_margin="@dimen/fab_margin"-->
    <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->

</android.support.design.widget.CoordinatorLayout>